# ChangeLog for dev-libs/nspr
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nspr/ChangeLog,v 1.104 2008/04/30 13:47:55 armin76 Exp $

  30 Apr 2008; Raúl Porcel <armin76@gentoo.org> nspr-4.6.8.ebuild,
  nspr-4.7.ebuild, nspr-4.7.1_beta2.ebuild:
  Add CC and CXX to make

  02 Apr 2008; Raúl Porcel <armin76@gentoo.org> -nspr-4.7.1_beta1.ebuild,
  nspr-4.7.1_beta2.ebuild:
  Restore keywords, remove old

  26 Mar 2008; Markus Meier <maekke@gentoo.org> nspr-4.6.8.ebuild:
  amd64 stable, bug #213601

  23 Mar 2008; nixnut <nixnut@gentoo.org> nspr-4.6.8.ebuild:
  Stable on ppc wrt bug 213601

  22 Mar 2008; Brent Baude <ranger@gentoo.org> nspr-4.6.8.ebuild:
  Marking nspr-4.6.8 ppc64 for bug 213601

  17 Mar 2008; Jeroen Roovers <jer@gentoo.org> nspr-4.6.8.ebuild:
  Stable for HPPA (bug #213601).

*nspr-4.7.1_beta2 (17 Mar 2008)

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> nspr-4.6.7.ebuild,
  nspr-4.6.8.ebuild, nspr-4.7.ebuild, nspr-4.7.1_beta1.ebuild,
  +nspr-4.7.1_beta2.ebuild:
  Version bump, fix LICENSE, thanks to zlin

  16 Mar 2008; Raúl Porcel <armin76@gentoo.org> nspr-4.6.8.ebuild:
  alpha/ia64/sparc/x86 stable

*nspr-4.7.1_beta1 (25 Feb 2008)

  25 Feb 2008; Raúl Porcel <armin76@gentoo.org> +nspr-4.7.1_beta1.ebuild:
  Version bump

  14 Feb 2008; Raúl Porcel <armin76@gentoo.org> nspr-4.6.7.ebuild,
  nspr-4.6.8.ebuild, nspr-4.7.ebuild:
  Fix bug #210041, bug #210039, thanks to vapier

*nspr-4.7 (11 Feb 2008)
*nspr-4.6.8 (11 Feb 2008)

  11 Feb 2008; Raúl Porcel <armin76@gentoo.org> +nspr-4.6.8.ebuild,
  +nspr-4.7.ebuild, -nspr-4.7.0_pre20080129.ebuild:
  Version bump

*nspr-4.7.0_pre20080129 (31 Jan 2008)

  31 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  -nspr-4.7.0_pre20071016.ebuild, -nspr-4.7.0_pre20071218.ebuild,
  -nspr-4.7.0_pre20080113.ebuild, -nspr-4.7.0_pre20080120.ebuild,
  +nspr-4.7.0_pre20080129.ebuild:
  Version bump, remove old

*nspr-4.7.0_pre20080120 (24 Jan 2008)
