@@ -5,11 +5,13 @@ AUX nspr-4.6.1-prtime.patch 1003 RMD160 20a8efaffdaf51d55566c14ebac1f40d3f22303b
 AUX nspr-4.7.0-prtime.patch 964 RMD160 a963c21fb1ce5e8913d3c41753ca37b24e80798d SHA1 b47ffa12022ea83b738e5d847e61cca026ec7f07 SHA256 3fd4f3c68257dced021c0bfa00245d0da2d6c64205135b1cc89f96a3375dffc7
 DIST nspr-4.6.7.tar.gz 1303759 RMD160 11a0d8b14ebdd441f6899c464b77144704ab638e SHA1 cf45319d02285ec5479445a1e9adfb9e94f55a6a SHA256 314e078f954677f469f2a60e8aca8efa3dd1807f7e1a109cc688a2469e2e3b70
 DIST nspr-4.6.8.tar.gz 1313108 RMD160 da8b77c3b386adb82467613e0bcdbdf5f68369ea SHA1 ca0d7a940e1cf6cf6bd63680fedf090195d0b460 SHA256 47750e6a99e2570fa2119f21d5d201174282679352379a565e3e5a80453e48b1
+DIST nspr-4.7.1.tar.bz2 980527 RMD160 9eeb7c64ddee51a4647a9a518c02161a3937d2c0 SHA1 126d9507c6a05d547e61da49701618b61555b1b4 SHA256 3816016e1dc99e08d03a5fd8c1ee8657f69e7035d2503756a78bd833c3393957
 DIST nspr-4.7.1_beta2.tar.bz2 979582 RMD160 cf7fb152f9109023bd3bd55c51c169f02ffc1677 SHA1 42aa59ded17b692a3fcf1825eaccd7cbdec13c82 SHA256 294b50b259716e22b485a3a5b335d168dbb39a3c954710ab172243e86342ed75
 DIST nspr-4.7.tar.gz 1304632 RMD160 9a2f24e9bde6006dea4af2f6d0ff7a3f419df5f4 SHA1 5d65e7960cde2059bfbc854c47c1eb295b9a2198 SHA256 6662a33cd04dee12d3b85c195277d05b81f46ec22369589fe371dad06e681aff
 EBUILD nspr-4.6.7.ebuild 2773 RMD160 cf1d1853a5d27824dbbdaea8fbf6b7d7627e9685 SHA1 31d0af895d170ce8dee6a080c650c4c269a278ff SHA256 8d3383bb8045135ef67e4c81a0e99dfb1705e0e0f15127aa08a0690b8e93a8a7
 EBUILD nspr-4.6.8.ebuild 2808 RMD160 8b5878a0aa3b1f5be6fe35c82bd6e3da4de033c7 SHA1 6a48d20373ce8759daf43104aa7b317ad07cdaff SHA256 1e26daec1c00dc0b30659f9bb9069974de27422dd434d7e78ea06cd7e5f92ee3
+EBUILD nspr-4.7.1.ebuild 2259 RMD160 7fd4b5d39299e965877792efe52a7b5133f835d1 SHA1 44d42aadb976b5e8299297925709f1ce10d78631 SHA256 fc4ed5a892335ed85551880729ef053db6bbcc2f3ed51f914f9d7c9171a91322
 EBUILD nspr-4.7.1_beta2.ebuild 2265 RMD160 6a34ef33dc28c9cd95be65325334661dbc12c9ec SHA1 a5190b481a85bec1d4588c386edc4cbd11557584 SHA256 08945af960b8a08d795b28c5121e4ba8b230940794d891dcd672d020a3f490bb
 EBUILD nspr-4.7.ebuild 2257 RMD160 696c38e465242e78ef59d9986ffbb2e83ec1132c SHA1 bf361f0f0246e029287f36764d6f4ac695174723 SHA256 c1e7ec5e8e43629ad8692be48a4ce4ed93844f5ea184dadcb7ad076f1bec5ea9
-MISC ChangeLog 13442 RMD160 64cd3aa34365a4b79bfe93e6970f2c5e173919c0 SHA1 f4f854363a7b98a5d6ac234f9649f56d672aafad SHA256 4f420f1514b8f173cb90c1bf387fd184bb4dd469efeed4cdf9f1f9ace0f209fd
+MISC ChangeLog 13554 RMD160 2aaf73a51544cbf4978b2ca0487d61048a0e0026 SHA1 4ee35c6f34cbb5876660a3150229320a66d83671 SHA256 ed803052f80da95a493aa33436d7a6a4fab0f83f614e262b8d5ca2022c5db0d4
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
