@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/nspr
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nspr/ChangeLog,v 1.104 2008/04/30 13:47:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nspr/ChangeLog,v 1.105 2008/05/11 14:29:03 armin76 Exp $
+
+*nspr-4.7.1 (11 May 2008)
+
+  11 May 2008; Raúl Porcel <armin76@gentoo.org> +nspr-4.7.1.ebuild:
+  Version bump
 
   30 Apr 2008; Raúl Porcel <armin76@gentoo.org> nspr-4.6.8.ebuild,
   nspr-4.7.ebuild, nspr-4.7.1_beta2.ebuild:
